<resources>
    <string name="app_name">Genius Quiz</string>
    <string name="title">Welcome to Genius Quiz!</string>
    <string name="txtDescription">Answer these questions to determine your genius level</string>
    <string name="question1">1. You are running a race and pass the person in second place. What place are you in? </string>
    <string name="answer1.1">1st</string>
    <string name="question2">2. How many squares are there on a chess board? </string>
    <string name="question3">3. Sounds waves travel the fastest in: </string>
    <string name="answer3.1">solids (compared to liquids)</string>
    <string name="answer3.2">liquids (compared to gases)</string>
    <string name="question4">4. You have 6 apples. You take 4 away. How many do you have? </string>
    <string name="question5">5. The Latin phrase \"Caveat Emptor\" means:</string>
    <string name="answer5.1">"Let the buyer beware"</string>
    <string name="answer5.2">"With a grain of salt</string>
    <string name="answer5.3">"All things being equal"</string>
    <string name="question6">6. A verb functioning as a noun is called?</string>
    <string name="answer6.1">superlative</string>
    <string name="answer6.2">gerund</string>
    <string name="answer6.3">auxiliary verb</string>
    <string name="question7">7. Which part of the body produces insulin?</string>
    <string name="question8">8. What number best completes the following squence: 1,2,4,7,11,?,22</string>
    <string name="question9">9. Does China and India share a border? </string>
    <string name="question10">10. How many innings are there in a baseball game?</string>

    <string name="submitBtn">Submit</string>
</resources>
