<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.geniusquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:gravity="center_horizontal"
                android:textSize="35sp"
                android:layout_margin="16dp"/>

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/lightbulb"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDescription"
            android:textSize="20sp"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            style="@style/QuestionTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1.1"
                android:layout_margin="4dp"
                style="@style/ButtonTheme"
                android:onClick="firstQuestion"/>
            <Button
                android:id="@+id/btn1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2nd"
                android:layout_margin="4dp"
                style="@style/ButtonTheme"
                android:onClick="firstQuestion"/>
            />
            <Button
                android:id="@+id/btn1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3rd"
                android:layout_margin="4dp"
                style="@style/ButtonTheme"
                android:onClick="firstQuestion"/>
            />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            style="@style/QuestionTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="48"
                android:layout_margin="4dp"
                android:onClick="secondQuestion"
                style="@style/ButtonTheme"
                />
            <Button
                android:id="@+id/btn2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="54"
                android:layout_margin="4dp"
                android:onClick="secondQuestion"
                style="@style/ButtonTheme"
               />
            <Button
                android:id="@+id/btn2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="64"
                android:layout_margin="4dp"
                android:onClick="secondQuestion"
                style="@style/ButtonTheme"
              />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            style="@style/QuestionTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn3_1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/answer3.1"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="thirdQuestion"
               />
            <Button
                android:id="@+id/btn3_2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/answer3.2"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="thirdQuestion"
             />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            style="@style/QuestionTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn4_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="fourthQuestion"
               />
            <Button
                android:id="@+id/btn4_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="fourthQuestion"
              />
            <Button
                android:id="@+id/btn4_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="fourthQuestion"
             />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            style="@style/QuestionTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn5_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5.1"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="fifthQuestion" />
            <Button
                android:id="@+id/btn5_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5.2"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="fifthQuestion" />
            <Button
                android:id="@+id/btn5_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5.3"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="fifthQuestion" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            style="@style/QuestionTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn6_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6.1"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="sixthQuestion"
              />
            <Button
                android:id="@+id/btn6_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6.2"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="sixthQuestion"
         />
            <Button
                android:id="@+id/btn6_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6.3"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="sixthQuestion"
         />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            style="@style/QuestionTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn7_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="liver"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="seventhQuestion"
             />
            <Button
                android:id="@+id/btn7_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="pancreas"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="seventhQuestion"
              />
            <Button
                android:id="@+id/btn7_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="thyroid"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="seventhQuestion"
             />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question8"
            style="@style/QuestionTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn8_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="eighthQuestion"
                />
            <Button
                android:id="@+id/btn8_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="eighthQuestion"
            />
            <Button
                android:id="@+id/btn8_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="16"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="eighthQuestion"
           />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9"
            style="@style/QuestionTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn9_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="ninthQuestion"
                />
            <Button
                android:id="@+id/btn9_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="ninthQuestion"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question10"
            style="@style/QuestionTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn10_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="tenthQuestion"
                />
            <Button
                android:id="@+id/btn10_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="tenthQuestion"
                />
            <Button
                android:id="@+id/btn10_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:layout_margin="8dp"
                style="@style/ButtonTheme"
                android:onClick="tenthQuestion"
                />

        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitBtn"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#F9A825"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="32dp"
            android:textSize="25sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="submitButton"/>


    </LinearLayout>

</ScrollView>
